feat: implement TasksTable component with task management features and integrate MainTaskTimer for enhanced tracking

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,7 @@
     "editor.formatOnSave": true,
     "editor.codeActionsOnSave": {
         "source.fixAll.eslint": "always"
-    }
+    },
+    // typeScript preferences can be added here
+    "typescript.preferences.importModuleSpecifier": "non-relative"
 }
